[package]
name = "mtg-proxy-boosterpack-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dirs = "5"
printpdf = { version = "0.9", features = ["images", "jpeg"] }
image = "0.24"
gtk4 = "0.11.1"
